Template Complete, Add Projects + Pages later

--- a/index.html
+++ b/index.html
@@ -2,12 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Your Name | Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
-<h1>Testing if this shows up</h1>
-    
+    <header>
+        <h1>Kevins Cadet</h1>
+        <!-- <nav>
+            <a href="#about">About</a>
+            <a href="#projects">Projects</a>
+        </nav> -->
+    </header>
+
+    <section id="projects">
+        <h2>Projects</h2>
+
+        <div class="projects-container">
+
+            <div class="project-card">
+                <h3>Project Title</h3>
+                <p>Placeholder Desc for project</p>
+                <a href="#">View Project</a>
+            </div>
+
+            <div class="project-card">
+                <h3>Project Title</h3>
+                <p>Placeholder Desc for project</p>
+                <a href="#">View Project</a>
+            </div>
+
+            <div class="project-card">
+                <h3>Project Title</h3>
+                <p>Placeholder Desc for project</p>
+                <a href="#">View Project</a>
+            </div>
+
+        </div>
+     </section>
+
+     <section id="contact">
+        <h2>Contact Me</h2>
+        <p>
+        GMAIL: <a href="mailto:kevincadet422@gmail.com">kevincadet422@gmail.com</a>
+        </p>
+        <p>BCMAIL: <a href="mailto:kevins.cadet13@bcmail.cuny.edu">kevins.cadet13@bcmail.cuny.edu</a>
+        </p>
+    </section>
+
+<script src="script.js" defer></script>
 </body>
 </html>
