Template Complete, Seperated Class Projects + Add Pages Later

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <header>
         <h1>Kevins Cadet</h1>
+        <h4><i>work in progress</i></h4>
         <!-- <nav>
             <a href="#about">About</a>
             <a href="#projects">Projects</a>
@@ -19,7 +20,33 @@
     </header>
 
     <section id="projects">
-        <h2>Projects</h2>
+        <h2>Projects - CISC 3610</h2>
+
+        <div class="projects-container">
+
+            <div class="project-card">
+                <h3>Project Title</h3>
+                <p>Placeholder Desc for project</p>
+                <a href="#">View Project</a>
+            </div>
+
+            <div class="project-card">
+                <h3>Project Title</h3>
+                <p>Placeholder Desc for project</p>
+                <a href="#">View Project</a>
+            </div>
+
+            <div class="project-card">
+                <h3>Project Title</h3>
+                <p>Placeholder Desc for project</p>
+                <a href="#">View Project</a>
+            </div>
+
+        </div>
+     </section>
+
+    <section id="projects">
+        <h2>Projects - CISC 3140</h2>
 
         <div class="projects-container">
 
